# PhoTrack

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
photrack/: __init__.py  __main__.py  main.py  test.py
photrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
